syntax = "proto3";

package prototest;

import "upspin.io/upspin/proto/upspin.proto";

message EchoRequest {
    string payload = 1;
}

message EchoResponse {
    string payload = 1;
}

service TestService {
	rpc Ping (proto.PingRequest) returns (proto.PingResponse) {}
	rpc Echo (EchoRequest) returns (EchoResponse) {}
}
